# myemail

./: README.md  pyproject.toml
myemail/: __init__.py  myemail.py
