[tool.poetry]
name = "myemail"
version = "0.9.0"
description = "A simple package to send emails with python"
authors = ["tct123 <42028373+tct123@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tct123/myemail"

exclude = [
    ".env"
]


[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
